return no immutable list to sort after